--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Hello word</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Cripto trade project</title>
+        <link rel="icon" href="./assets/img/bitcoin_logo.png" type="image/png">
+    </head>
+</html>
